added basic containers, and started styling them

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,17 @@
 </head>
 <body>
     <div class="main-container">
+        <!--form section-->
+        <form class="book-form">
+
+        </form>
+        <!--book display-->
+        <section class="book-list">
+
+        </section>
+
+
+
 
     </div>
     <script src="./js/app.js"></script>
