added labels and inputs in form

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,27 @@
     <div class="main-container">
         <!--form section-->
         <form class="book-form">
+            <h2>Register Books</h2>
+
+            <label for="title">Title:</label>
+            <input type="text" name="title" class="title">
+            <label for="author">Author:</label>
+            <input type="text" name="author" class="author">
+            <label for="isbn">ISBN:</label>
+            <input type="text" name="isbn" class="isbn">
+            <label for="format">Format:</label>
+            <select name="format" class="format">
+                <option value="physical">Physichal Book</option>
+                <option value="audio">Audio Book</option>
+            </select>
+
+            <label for="narrator">Narrator:</label>
+            <input type="text" name="narrator" class="narrator">
+
+            <button type="submit" class="submit-button">Register Book</button>
+
+
+
 
         </form>
         <!--book display-->
