added buttons and styled inputs

--- a/src/index.html
+++ b/src/index.html
@@ -36,6 +36,31 @@
         </form>
         <!--book display-->
         <section class="book-list">
+            <div class="select-list-button-container">
+                <button class="render-physical-book-button">Display Physical Books</button>
+                <button class="render-audio-book-button">Display Audio Books</button>
+            </div>
+
+            <div class="display-books-container">
+                <div class="display-physical-books">
+
+                </div>
+
+
+                <div class="display-audio-books">
+                    
+                </div>
+
+
+
+
+
+            </div>
+
+
+
+
+
 
         </section>
 
