styled buttons, and headers

--- a/src/index.html
+++ b/src/index.html
@@ -43,12 +43,35 @@
 
             <div class="display-books-container">
                 <div class="display-physical-books">
+                    <header class="physical-books-header">
+                        <span>Title</span>
+                        <span>Author</span>
+                        <span>Format</span>
+                        <span>ISBN</span>
+                        <span></span>
+                    </header>
+
+                    <ul class="physical-books-list">
+
+                    </ul>
+
 
                 </div>
 
 
                 <div class="display-audio-books">
-                    
+                    <header class="audio-books-header">
+                        <span>Title</span>
+                        <span>Author</span>
+                        <span>Format</span>
+                        <span>Narrator</span>
+                        <span></span>
+                    </header>
+
+                    <ul class="audio-books-list">
+
+                    </ul>
+
                 </div>
 
 
