--- a/src/index.html
+++ b/src/index.html
@@ -14,19 +14,19 @@
             <h2>Register Books</h2>
 
             <label for="title">Title:</label>
-            <input type="text" name="title" class="title">
+            <input type="text" name="title" class="title" required/>
             <label for="author">Author:</label>
-            <input type="text" name="author" class="author">
+            <input type="text" name="author" class="author" required/>
             <label for="isbn">ISBN:</label>
-            <input type="text" name="isbn" class="isbn">
+            <input type="text" name="isbn" class="isbn" required/>
             <label for="format">Format:</label>
-            <select name="format" class="format">
+            <select name="format" class="format" required>
                 <option value="physical">Physichal Book</option>
                 <option value="audio">Audio Book</option>
             </select>
 
             <label for="narrator">Narrator:</label>
-            <input type="text" name="narrator" class="narrator">
+            <input type="text" name="narrator" class="narrator" required disabled/>
 
             <button type="submit" class="submit-button">Register Book</button>
 
