--- a/src/index.html
+++ b/src/index.html
@@ -1,96 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <link rel="stylesheet" href="./styles/style.css">
-     <title>Object-Oriented-Project</title>
-   
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://fonts.googleapis.com/css2?family=Abel&family=Rubik&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./styles/style.css" />
+    <title>Object-oriented project</title>
+  </head>
+  <body>
     <div class="main-container">
-        <!--form section-->
-        <form class="book-form">
-            <h2>Register Books</h2>
+      <!-- FORM SECTION -->
+      <form class="medForm">
+        <h2>Register Meds</h2>
 
-            <label for="title">Title:</label>
-            <input type="text" name="title" class="title" required/>
-            <label for="author">Author:</label>
-            <input type="text" name="author" class="author" required/>
-            <label for="isbn">ISBN:</label>
-            <input type="text" name="isbn" class="isbn" required/>
-            <label for="format">Format:</label>
-            <select name="format" class="format" required>
-                <option value="physical">Physichal Book</option>
-                <option value="audio">Audio Book</option>
-            </select>
+        <label for="product">Product Name:</label>
+        <input type="text" name="product" class="product" required/>
+        <label for="manufacturer">Manufacturer:</label>
+        <input type="text" name="manufacturer" class="manufacturer" required/>
+        <label for="productId">Product ID:</label>
+        <input type="text" name="productId" class="productId" required/>
+        <label for="expirationDate">Expration Date:</label>
+        <input type="text" name="expirationDate" class="expirationDate" required/>
+        <label for="prescriptionSelect"></label>
+        <select name="prescriptionSelect" class="prescriptionSelect" required>
+          <option value="prescription">Prescription</option>
+          <option value="non-prescription">Non-Prescription</option>
+        </select>
+        <label for="quantity">Quantity:</label>
+        <input type="number" name="quantity" class="quantity" required/>
+        <button type="submit" class="submit-button">Register Meds</button>
+      </form>
 
-            <label for="narrator">Narrator:</label>
-            <input type="text" name="narrator" class="narrator" required disabled/>
+      <!-- DISPLAY BOOKS SECTION -->
+      <section class="medicine-list">
+        <div class="select-list-button-container">
+          <button class="render-prescription-meds-button">
+            Display Prescription Meds
+          </button>
+          <button class="render-non-prescription-meds-button">Display Non-prescription Meds</button>
+        </div>
 
-            <button type="submit" class="submit-button">Register Book</button>
-
-
-
-
-        </form>
-        <!--book display-->
-        <section class="book-list">
-            <div class="select-list-button-container">
-                <button class="render-physical-book-button">Display Physical Books</button>
-                <button class="render-audio-book-button">Display Audio Books</button>
-            </div>
-
-            <div class="display-books-container">
-                <div class="display-physical-books">
-                    <header class="physical-books-header">
-                        <span>Title</span>
-                        <span>Author</span>
-                        <span>Format</span>
-                        <span>ISBN</span>
-                        <span></span>
-                    </header>
-
-                    <ul class="physical-books-list">
-
-                    </ul>
+        <div class="displayPrescriptionMedsContainer">
 
 
-                </div>
+          <div class="display-prescription-meds">
+            <header class="prescription-meds-header">
+              <span>Product Name</span>
+              <span>Manufacturer</span>
+              <span>Prescription</span>
+              <span>Expration-Date</span>
+              <span>Quantity</span>
+              <span>Product-ID</span>
+              <span></span>
+            </header>
+            <ul class="prescription-meds-list"></ul>
+          </div>
 
+          <div class="display-non-prescription-meds">
+            <header class="non-prescription-meds-header">
+              <span>Product Name</span>
+              <span>Manufacturer</span>
+              <span>Prescription</span>
+              <span>Expration-Date</span>
+              <span>Quantity</span>
+              <span>Product-ID</span>
+              <span></span>
+            </header>
+            <ul class="non-prescription-meds-list">
 
-                <div class="display-audio-books">
-                    <header class="audio-books-header">
-                        <span>Title</span>
-                        <span>Author</span>
-                        <span>Format</span>
-                        <span>Narrator</span>
-                        <span></span>
-                    </header>
-
-                    <ul class="audio-books-list">
-
-                    </ul>
-
-                </div>
-
-
-
-
-
-            </div>
-
-
-
-
-
-
-        </section>
-
-
-
-
+            </ul>
+          </div>
+        </div>
+      </section>
     </div>
     <script src="./js/app.js"></script>
-</body>
+  </body>
 </html>
